# oneLLM

./: CMakeLists.txt  README.md  onellm.cpp
examples/cpp/: CMakeLists.txt
examples/cpp/attention/: CMakeLists.txt  context_attn_example.cpp  masked_attn_example.cpp
examples/cpp/decoder/: CMakeLists.txt  context_decoder_example.cpp  self_decoder_example.cpp
examples/cpp/ffn/: ffn_example.cpp
src/: CMakeLists.txt
src/kernels/: CMakeLists.txt  activation_kernel.cu  activation_kernel.h  append_to_kvcache.cu  append_to_kvcache.h  attn_softmax_kernel.cu  attn_softmax_kernel.h  beamsearch_topK.cu  beamsearch_topK.h  build_casual_mask.cu  build_casual_mask.h  cal_paddingoffset.cu  cal_paddingoffset.h  context_decoder_attn.cu  cublas_wrapper.cc  cublas_wrapper.h  decoder_masked_attn.cu  decoder_masked_attn.h  fused_addresidual_norm.cu  fused_addresidual_norm.h  fused_transpose_reshape_remv_pad.cu  fused_transpose_reshape_remv_pad.h  input_embedding.cu  input_embedding.h  qkv_bias_and_RoPE.cu  qkv_bias_and_RoPE.h  qkv_linear.cu  qkv_linear.h  rmsnorm_kernel.cu  rmsnorm_kernel.h  softmax_kernel.cu  softmax_kernel.h  topK_sampling.cu  topK_sampling.h  transpose_kernel.cu  transpose_kernel.h
src/layers/: CMakeLists.txt
src/layers/attention/: CMakeLists.txt  context_attention.cpp  context_attention.h  masked_self_attention.cpp  masked_self_attention.h
src/layers/decoder/: CMakeLists.txt  context_decoder.cpp  context_decoder.h  self_decoder.cpp  self_decoder.h
src/layers/ffn/: CMakeLists.txt  ffn.cpp  ffn.h
src/memory/allocator/: base_allocator.h  cuda_allocator.h
src/models/: CMakeLists.txt  basemodel.h  common_params.h  tokenizer.h
src/models/llama/: llama.cpp  llama.h  llama_params.h
src/utils/: CMakeLists.txt  common_utils.h  cuda_utils.cu  cuda_utils.cuh  cuda_utils.h  macro.h  model_utils.h  params.h  string_utils.h  tensor.h  vectorize_utils.h
src/weights/: base_weights.h  weight.h
src/weights/llama/: CMakeLists.txt  attention_weights.h  embedding_weights.h  ffn_weights.h  layer_weights.cc  layer_weights.h  llama_weights.cc  llama_weights.h  norm_weights.h
tests/: CMakeLists.txt  test_allocator.cpp  test_tensor.cpp
tests/unittests/: CMakeLists.txt  CMakeLists_bk.txt  test_activation.cu  test_append_kvcache.cu  test_batch_gemm.cu  test_beamsearch_topK.cu  test_cal_paddingoffset.cu  test_casual_mask.cu  test_decoder_masked_attn.cu  test_fused_addres_rms.cu  test_fused_trans_remv_pad.cu  test_input_embedding.cu  test_linear.cu  test_qkv_bias_and_rope.cu  test_rmsnorm.cu  test_softmax.cu  test_topK_sampling.cu  test_transpose.cu
tools/: FT_convert_weight_to_bin_final.py
